# rust_rockfall

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements-tools.txt
calibration/: README.md
data/: README.md  datasets.yaml
docs/: README.md  active_shape_contact_design.md  agent_reference.md  agent_work_log.md  agent_work_log_archive.md  annual_physical_prototype_preflight.md  annual_physical_validation_calibration_review_gate.md  architecture_boundaries.md  autonomous_development_program.md  balfrin_failure_recovery_playbook.md  balfrin_minimal_demo_vs_closure.md  balfrin_post_run_interpretation_gate.md  balfrin_postproc_microbenchmark_tb305.md  balfrin_probe_slurm_driver.md  balfrin_remote_checkout_hygiene_tb304.md  balfrin_restartability_recovery_report.md  balfrin_single_job_execution_sufficiency.md  balfrin_single_release_zone_execution_report.md  balfrin_skills.md  balfrin_target_area_spatial_uncertainty_stability_report.md  balfrin_tschamut_pilot_runbook.md  balfrin_tschamut_readiness.md  benchmark_case_schema.yaml  benchmark_catalog.md  block_release_probability_evidence_contract.md  chant_sura_contact_generalization.md  chant_sura_contact_validation.md  chant_sura_fluelapass_public_context_acquisition_package.yaml  chant_sura_fluelapass_real_context_acquisition_decision.md  chant_sura_model_improvement_evaluation.md  columnar_output_design_decision.md  conditional_hazard_convergence_acceptance_protocol.md  contact_model_decision.md  current_maturity_snapshot.md  current_state_gap_analysis_next_directions.md  dataset_strategy.md  datasets.md  decision_log.md  deep_code_review.md  deep_consistency_followups_2026-05-10.md  (+115 more)
hazard/: README.md
(+624 files in other folders)
